--- a/TestPiCarre/TestPiCarre.csproj
+++ b/TestPiCarre/TestPiCarre.csproj
@@ -42,6 +42,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="TestPiCarreManifest\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{aa27e31b-bfeb-49b0-874e-77df31e1d994}</SharePointProjectItemId>
     </None>
